--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4",
+    "ethers": "^5.6.8",
     "hardhat": "^2.9.3",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": ">=6",
@@ -60,6 +60,7 @@
   "dependencies": {
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
+    "axios": "^0.27.2",
     "typechain": "^8.0.0"
   },
   "private": "false",
